--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -186,6 +186,32 @@ header nav .nav-sections ul > li > ul > li {
   font-weight: 500;
 }
 
+
+.nav-wrapper {
+    background: linear-gradient(270deg, #1B1B1B 55.84%, #202020 96.63%);
+}
+
+.nav-wrapper .nav-sections ul {
+    background: var(--black);
+    border-radius: 24px;
+    align-items: center;
+}
+
+.nav-wrapper .nav-sections ul li {
+    margin: 0px;
+    line-height: 2.5;
+    font-size: 12px;
+}
+
+.nav-wrapper .nav-sections ul li a {
+    padding: 2px 20px;
+    color: #FFFFFF;
+    text-decoration: none;
+    display: block;
+    border-radius: 12px;
+}
+
+
 @media (min-width: 900px) {
   header nav .nav-sections {
     display: block;
