--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -198,9 +198,10 @@ header nav .nav-sections ul > li > ul > li {
 }
 
 .nav-wrapper .nav-sections ul li {
-    margin: 0px;
-    line-height: 2.5;
+    /* margin: 0px; */
+    /* line-height: 2.5; */
     font-size: 12px;
+    color: white;
 }
 
 .nav-wrapper .nav-sections ul li a {
@@ -224,9 +225,9 @@ header nav .nav-sections ul > li > ul > li {
   }
 
   header nav .nav-sections .nav-drop {
-    position: relative;
-    padding-right: 16px;
-    cursor: pointer;
+     position: relative; 
+     padding-right: 16px; 
+    cursor: pointer; 
   }
 
   header nav .nav-sections .nav-drop::after {
