--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -89,6 +89,69 @@ main .carousel-buttons button {
   background-color: var(--highlight-background-color);
 }
 
+
+.hero-section-wrapper .carousel-wrapper {
+  margin: auto;
+  max-width: none;
+}    
+
+
+
+.hero-section-wrapper .carousel-wrapper {
+  max-width: unset;
+}
+
+ .carousel {
+  display: flex;
+  scroll-snap-type: x mandatory;
+  overflow: scroll hidden;
+  scroll-behavior: smooth;
+  max-width: 1680px;
+  margin: auto;
+}
+
+
+.hero-section-wrapper .carousel-wrapper .carousel div {
+  width: 100%;
+  flex-shrink: 0;
+  scroll-snap-align: start;
+  position: relative;
+  /* min-height: 580px; */
+  align-items: flex-end;
+  display: flex;
+}
+.hero-section-wrapper .carousel-wrapper .carousel div .carousel-image picture {
+  position: absolute;
+  z-index: 0;
+  top: 0;
+  left: 4px;
+  bottom: 0;
+  right: 0;
+  box-sizing: border-box;
+}
+
+.carousel img {
+  object-fit: cover;
+  /* width: 100%; */
+  height: 100%;
+  /* object-position: 90%; */
+}
+
+.hero-section-wrapper .carousel-wrapper .carousel div .carousel-image picture img {
+  max-width: 100%;
+  width: auto;
+  height: auto;
+}
+
+.carousel div.carousel-text {
+    max-width: 1200px;
+    margin: 0 auto;
+    background-color: transparent;
+    min-height: 188px;
+    padding: 0 28px;
+}
+
+
 main .carousel-buttons button.selected {
   background-color: var(--link-color);
 }
