--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -217,3 +217,54 @@ main .carousel-buttons button.selected {
     min-height: 188px;
     padding: 0 28px;
 }
+
+ .hero-section-wrapper .columns-img-col picture {
+      top: unset;
+      left: -62px;
+      z-index: -1;
+  }
+
+  .hero-section-wrapper .columns-wrapper .columns div:nth-child(2) {
+    max-width: 199px;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    align-items: end;
+    position: relative;
+    left: 41%;
+}
+
+
+main .section.hero-section-wrapper {
+    padding: 50px 15px;
+}
+
+
+.section.hero-section-wrapper {
+    background: linear-gradient(94.07deg, #9B1E26 -17.35%, #000000 83.2%);
+    box-shadow: 0px 0px 9px rgba(0, 0, 0, 0.1);
+    height: 137px;
+    position: relative;
+  }
+
+  .section.hero-container {
+    position: absolute;
+    z-index: 999;
+  }
+
+  main .hero img {
+    left: 0;
+    position: absolute;
+    top: 20%;
+  }
+
+  
+
+.section.hero-section-wrapper.columns-container {
+    position: relative;
+  }
+
+  main .section.hero-section-wrapper {
+    padding: 64px 0;
+  }
+    
