--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -235,9 +235,10 @@ main .carousel-buttons button.selected {
 }
 
 
-/* main .section.hero-section-wrapper {
-    padding: 50px 15px;
-} */
+main .section.hero-section-wrapper {
+  padding: 50px 15px;
+  height: 280px;
+}
 
 
 .section.hero-section-wrapper {
