--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -239,7 +239,7 @@ main .carousel-buttons button.selected {
 
 
 main .section.hero-section-wrapper {
-  padding: 50px 15px;
+/*   padding: 50px 15px; */
   height: 280px;
 }
 
