--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -82,11 +82,11 @@ main .carousel-wrapper .carousel-buttons {
 
 main .carousel-buttons button {
   display: block;
-  height: 10px;
-  width: 10px;
+  height: 30px;
+  width: 30px;
   padding: 0;
   margin: 5px;
-  border-radius: 5px;
+  border-radius: 50%;
   background-color: var(--highlight-background-color);
 }
 
