--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -70,7 +70,7 @@ main .carousel-wrapper {
   max-width: unset;
 }
 
-main .carousel-wrapper .carousel-buttons {
+main .hero-section-wrapper .carousel-wrapper .carousel-buttons {
   text-align: center;
   margin-top: 0;
   position: absolute;
