--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -78,6 +78,7 @@ main .hero-section-wrapper .carousel-wrapper .carousel-buttons {
   right: 141px;
   left: 0;
   justify-content: right;
+  bottom: 10px;
 }
 
 main .get-more-from-bank-wapper .carousel-wrapper .carousel-buttons {
