--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -262,7 +262,7 @@ main .carousel-container {
         display: block;
         right: 0;
         background: transparent;
-        color: #fff;
+        color: white;
     }
         
   
