--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -274,5 +274,10 @@ main .carousel-container {
   /*   main .section.hero-section-wrapper {
       padding: 64px 0;
     } */
+
+main .get-more-from-bank-wapper .default-content-wrapper .button-container{
+    display: flex;
+    justify-content: center;
+}
       
   
