--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -280,7 +280,7 @@ main .get-more-from-bank-wapper .default-content-wrapper .button-container{
     justify-content: center;
 }
 
-.button-container a{
+main .get-more-from-bank-wapper .default-content-wrapper .button-container a{
     background: none;
 }
 
