--- a/styles/styles.css
+++ b/styles/styles.css
@@ -458,3 +458,10 @@ main .section.secondary-nav-section-wrapper {
 .in-the-spotlight-wrapper .cards-wrapper .cards ul li .cards-card-image {
     flex: 0 0 50px;
 }
+
+
+main .get-more-from-bank-wapper .default-content-wrapper .button-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
