--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -33,7 +33,7 @@ Fmain .carousel-container {
   main .carousel div.carousel-text {
     max-width: 1200px;
     margin: 0 auto;
-    background-color: white;
+    background-color: transparent;
     min-height: 188px;
     padding: 0 28px;
   }
