--- a/styles/styles.css
+++ b/styles/styles.css
@@ -352,11 +352,11 @@ main .section.secondary-nav-section-wrapper {
     flex-shrink: 0;
     scroll-snap-align: start;
     position: relative;
-     min-height: 238px; 
-        width: 34%;
-
+    min-height: 238px; 
+    width: 34%;
     align-items: flex-end;
     display: flex;
+    align-items: center;
 }
 
 
