--- a/styles/styles.css
+++ b/styles/styles.css
@@ -357,6 +357,7 @@ main .section.secondary-nav-section-wrapper {
     align-items: flex-end;
     display: flex;
     align-items: center;
+    flex-direction: row-reverse;
 }
 
 
