--- a/styles/styles.css
+++ b/styles/styles.css
@@ -482,3 +482,7 @@ main .get-more-from-bank-wapper .default-content-wrapper h2{
     margin: 0px;
     padding:0px
 }
+
+main .get-more-from-bank-wapper .carousel-wrapper .carousel-wrapper:nth-child(1){
+    background:#f3dadc;
+}
