--- a/styles/styles.css
+++ b/styles/styles.css
@@ -484,5 +484,5 @@ main .get-more-from-bank-wapper .default-content-wrapper h2{
 }
 
 main .get-more-from-bank-wapper .carousel-wrapper .carousel-wrapper:nth-child(1){
-    background:#f3dadc;
+    background-color: #f3dadc;
 }
