--- a/styles/styles.css
+++ b/styles/styles.css
@@ -483,6 +483,7 @@ main .get-more-from-bank-wapper .default-content-wrapper h2{
     padding:0px
 }
 
-.get-more-from-bank-wapper .carousel-wrapper .carousel:nth-child(1) div{
+.get-more-from-bank-wrapper .carousel-wrapper .carousel:nth-child(1) div
+ {
     background-color: #f3dadc;
 }
