--- a/styles/styles.css
+++ b/styles/styles.css
@@ -483,7 +483,8 @@ main .get-more-from-bank-wapper .default-content-wrapper h2{
     padding:0px
 }
 
-.get-more-from-bank-wrapper .carousel-wrapper .carousel:nth-child(1) div
- {
-    background-color: #f3dadc;
+
+/* Target the first div within the carousel block */
+.carousel.block > div:first-child {
+ background-color: #f3dadc;
 }
