--- a/styles/styles.css
+++ b/styles/styles.css
@@ -485,7 +485,7 @@ main .get-more-from-bank-wapper .default-content-wrapper h2{
 
 
 /* Target the first div within the carousel block */
-.get-more-from-bank-wrapper .carousel-wrapper .carousel > div:first-child {
+.get-more-from-bank-wrapper .carousel-wrapper .carousel .block> div:first-child {
  background-color: #f3dadc;
 }
 
