--- a/styles/styles.css
+++ b/styles/styles.css
@@ -487,3 +487,14 @@ main .get-more-from-bank-wapper .default-content-wrapper h2{
      background-color: #f3dadc;
 }
 
+.get-more-from-bank-wapper .carousel-wrapper .carousel div:nth-child(2) {
+     background-color: #e8ecf9;
+}
+
+.get-more-from-bank-wapper .carousel-wrapper .carousel div:nth-child(3) {
+     background-color: #fff7e8;
+}
+
+.get-more-from-bank-wapper .carousel-wrapper .carousel div:nth-child(4) {
+     background-color: #f3dadc;
+}
