--- a/styles/styles.css
+++ b/styles/styles.css
@@ -487,14 +487,30 @@ main .get-more-from-bank-wapper .default-content-wrapper h2{
      background-color: #f3dadc;
 }
 
+.get-more-from-bank-wapper .carousel-wrapper .carousel div:nth-child(1) p{
+     background-color: transparent;
+}
+
 .get-more-from-bank-wapper .carousel-wrapper .carousel div:nth-child(2) {
      background-color: #e8ecf9;
+}
+
+.get-more-from-bank-wapper .carousel-wrapper .carousel div:nth-child(2) p{
+     background-color: transparent;
 }
 
 .get-more-from-bank-wapper .carousel-wrapper .carousel div:nth-child(3) {
      background-color: #fff7e8;
 }
 
+.get-more-from-bank-wapper .carousel-wrapper .carousel div:nth-child(3) p{
+     background-color: transparent;
+}
+
 .get-more-from-bank-wapper .carousel-wrapper .carousel div:nth-child(4) {
      background-color: #f3dadc;
+}
+
+.get-more-from-bank-wapper .carousel-wrapper .carousel div:nth-child(4) p{
+     background-color: transparent;
 }
