--- a/styles/styles.css
+++ b/styles/styles.css
@@ -483,19 +483,19 @@ main .get-more-from-bank-wapper .default-content-wrapper h2{
     padding:0px
 }
 
-.get-more-from-bank-wapper .carousel-wrapper .carousel:nth-child(1) {
+.get-more-from-bank-wapper .carousel-wrapper .carousel div:nth-child(1) {
      background-color: #f3dadc;
 }
 
-.get-more-from-bank-wapper .carousel-wrapper .carousel:nth-child(2) {
+.get-more-from-bank-wapper .carousel-wrapper .carousel div:nth-child(2) {
      background-color: #e8ecf9;
 }
 
-.get-more-from-bank-wapper .carousel-wrapper .carousel:nth-child(3) {
+.get-more-from-bank-wapper .carousel-wrapper .carousel div:nth-child(3) {
      background-color: #fff7e8;
 }
 
-.get-more-from-bank-wapper .carousel-wrapper .carousel:nth-child(4) {
+.get-more-from-bank-wapper .carousel-wrapper .carousel div:nth-child(4) {
      background-color: #f3dadc;
 }
 
