--- a/styles/styles.css
+++ b/styles/styles.css
@@ -499,3 +499,7 @@ main .get-more-from-bank-wapper .default-content-wrapper h2{
      background-color: #f3dadc;
 }
 
+.get-more-from-bank-wapper .carousel-wrapper .carousel .carousel-text{
+    background: transparent;
+}
+
