--- a/styles/styles.css
+++ b/styles/styles.css
@@ -503,3 +503,7 @@ main .get-more-from-bank-wapper .default-content-wrapper h2{
     background: transparent;
 }
 
+get-more-from-bank-wapper .carousel-wrapper .carousel .carousel-image{
+    background: transparent;
+}
+
