--- a/styles/styles.css
+++ b/styles/styles.css
@@ -503,7 +503,7 @@ main .get-more-from-bank-wapper .default-content-wrapper h2{
     background: transparent;
 }
 
-get-more-from-bank-wapper .carousel-wrapper .carousel .carousel-image{
+get-more-from-bank-wapper .carousel-wrapper .carousel .carousel-image picture{
     background: transparent;
 }
 
