--- a/styles/styles.css
+++ b/styles/styles.css
@@ -483,6 +483,10 @@ main .get-more-from-bank-wapper .default-content-wrapper h2{
     padding:0px
 }
 
+.get-more-from-bank-wapper .carousel-wrapper .carousel div{
+    border-redious:20px;
+}
+
 .get-more-from-bank-wapper .carousel-wrapper .carousel div:nth-child(1) {
      background: #f3dadc;
 }
