--- a/styles/styles.css
+++ b/styles/styles.css
@@ -515,3 +515,7 @@ get-more-from-bank-wapper .carousel-wrapper .carousel .carousel-image picture{
     background: transparent;
 }
 
+.cards li {
+  
+    margin-right: 16px;
+}
