--- a/styles/styles.css
+++ b/styles/styles.css
@@ -519,3 +519,75 @@ get-more-from-bank-wapper .carousel-wrapper .carousel .carousel-image picture{
   
     margin-right: 16px;
 }
+
+  .section.customer-speak {
+    background: #9B1E26;
+    border-radius: 24px;
+    padding: 24px 0 15px 15px;
+    margin: 32px auto;
+    max-width: 1230px;
+  }
+  
+  .section.customer-speak .cards-wrapper .cards ul {
+    transition: transform 0.5s ease;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    margin-top: 16px;
+    height: 100%;
+  }
+  
+  .customer-speak .cards-wrapper .cards ul li {
+   flex: 1;
+    margin-right: 14px;
+    border-radius: 20px;
+    color: #464646;
+    font-size: 14px;
+    padding: 20px;
+  }
+  
+  .customer-speak .cards-wrapper .cards ul li .cards-card-body {
+    box-shadow: 0 0 0px rgba(0, 0, 0, 0);
+    margin: 0;
+  }
+  .customer-speak .cards-wrapper .cards ul li .cards-card-body p {
+    margin: 0;
+  }
+  .customer-speak .cards-wrapper .cards ul li .cards-card-body p:first-child{
+    color: #737373;
+  }
+  
+  .customer-speak .cards-wrapper .cards ul li .cards-card-body p:nth-child(2) code {
+    font-size: 14px;
+  }
+  
+  h2#hear-from-our-happy-customers {
+    color: #FFFFFF;
+    font-weight: 500;
+    font-size: 23px;
+    margin: 0;
+  }
+  
+  .customer-speak .default-content-wrapper .button-container a.button.primary {
+    text-align: center;
+    background-color: transparent;
+    margin: 0;
+    padding: 0;
+    font-weight: 600;
+    font-size: 16px;
+    overflow: unset;
+  }
+  .customer-speak .default-content-wrapper .button-container a.button.primary::after{
+    content: "";
+    border: solid var(--white);
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 3px;
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+    margin-left: 5px;
+  }
+  .customer-speak .default-content-wrapper .button-container {
+    text-align: center;
+    margin: 25px 0 0 0;
+  }
