--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -292,6 +292,24 @@ main .carousel div.carousel-text p:nth-child(1) {
 .get-more-from-bank-wapper .carousel-wrapper .carousel div:nth-child(1) .carousel-text{
     background: transparent;
 }
+.get-more-from-bank-wapper .carousel-wrapper .carousel div:nth-child(2) .carousel-image{
+    background: transparent;
+}
+.get-more-from-bank-wapper .carousel-wrapper .carousel div:nth-child(2) .carousel-text{
+    background: transparent;
+}
+.get-more-from-bank-wapper .carousel-wrapper .carousel div:nth-child(3) .carousel-image{
+    background: transparent;
+}
+.get-more-from-bank-wapper .carousel-wrapper .carousel div:nth-child(3) .carousel-text{
+    background: transparent;
+}
+.get-more-from-bank-wapper .carousel-wrapper .carousel div:nth-child(4) .carousel-image{
+    background: transparent;
+}
+.get-more-from-bank-wapper .carousel-wrapper .carousel div:nth-child(4) .carousel-text{
+    background: transparent;
+}
 
 
 
