--- a/styles/styles.css
+++ b/styles/styles.css
@@ -591,5 +591,5 @@ get-more-from-bank-wapper .carousel-wrapper .carousel .carousel-image picture{
   }
   .customer-speak .default-content-wrapper .button-container {
     text-align: center;
-    margin: 25px 0 0 0;
+    margin: 0px;
   }
