--- a/styles/styles.css
+++ b/styles/styles.css
@@ -593,3 +593,7 @@ get-more-from-bank-wapper .carousel-wrapper .carousel .carousel-image picture{
     text-align: center;
     margin: 0px;
   }
+
+main .customer-speak  .default-content-wrapper .button-container{
+    background-color:yello;
+}
