--- a/styles/styles.css
+++ b/styles/styles.css
@@ -596,4 +596,5 @@ get-more-from-bank-wapper .carousel-wrapper .carousel .carousel-image picture{
 
 main .customer-speak .default-content-wrapper .button-container .button{
     background: none;
+    padding:0px;
 }
