--- a/styles/styles.css
+++ b/styles/styles.css
@@ -595,6 +595,8 @@ get-more-from-bank-wapper .carousel-wrapper .carousel .carousel-image picture{
   }
 
 main .customer-speak .default-content-wrapper .button-container .button{
-    background: none;
+    background: red;
     padding:0px;
+    border-radius: 0px;
+
 }
