--- a/styles/styles.css
+++ b/styles/styles.css
@@ -598,5 +598,5 @@ main .customer-speak .default-content-wrapper .button-container .button{
     background: none;
     padding:0px;
     border-radius: 0px;
-    margin:0px;
+    margin:10px 0px;
 }
