--- a/styles/styles.css
+++ b/styles/styles.css
@@ -601,3 +601,149 @@ main .customer-speak .default-content-wrapper .button-container .button{
     margin:10px 0px;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  .section.footer-columns.columns-container {
+    /* max-width: 1455px; */
+    background: #9D1D27;
+    color: white;
+    font-size: 14px;
+    /* height: 780px; */
+    padding-top: 30px;
+  }
+  
+  .section .columns-wrapper p{
+    margin-top: 6px;
+  }
+  
+  .footer-columns .columns-wrapper .columns pre {
+    overflow: hidden
+  }
+  
+  .columns-wrapper:nth-child(1) div {
+    gap: 0;
+  }
+  .footer-columns .columns-wrapper .columns div:nth-child(3){
+  margin-bottom: 11.9%;
+  
+  }
+  
+  .footer-columns .columns-wrapper .columns div:nth-child(4){
+  margin-bottom: 11.9%;
+  
+  }
+  .footer-columns .columns-wrapper .columns pre {
+    background-color: transparent;
+  }
+  
+  .footer-columns .columns-wrapper .columns div table tbody tr {
+    display: flex;
+    justify-content: space-between
+  }
+  
+  .footer-columns .columns-wrapper .columns div table tbody tr td {
+    max-width: 120px;
+  }
+  
+  
+  .footer-wrapper{
+    display: none;
+  }
+  
