--- a/styles/styles.css
+++ b/styles/styles.css
@@ -601,6 +601,24 @@ main .customer-speak .default-content-wrapper .button-container .button{
     margin:10px 0px;
 }
 
+.section.customer-speak .cards-wrapper {
+    overflow: visible;
+    position: relative;
+    width: 100%;
+}
+
+.section.customer-speak .cards {
+    display: flex !important;
+}
+
+.section.customer-speak .cards-wrapper .cards ul li .cards-card-body {
+    background-color: white;
+}
+
+.section.customer-speak .cards-wrapper .cards ul li .cards-card-body p {
+    margin: 0;
+}
+
 
 
 
